feat: Enhance AI generation and UI elements
Introduces a new image style ('3D Render'), updates the default Gemini model to a newer preview version for potentially improved output, and enhances JSON parsing robustness in the Gemini service.

Improves UI readability with increased line height and refined text rendering. Adds new icons for calendar, clock, upload, and cube to support future features related to scheduling and content types. Also adjusts the default body text color for better contrast in dark mode and updates the ordering of image style previews.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         transition: background-color 0.3s ease;
+        /* Enhanced readability */
+        line-height: 1.6;
+        text-rendering: optimizeLegibility;
       }
 
       /* Minimal Scrollbar */
@@ -81,7 +84,7 @@
 }
 </script>
 </head>
-  <body class="text-slate-900 dark:text-slate-100 antialiased selection:bg-indigo-100 selection:text-indigo-900 dark:selection:bg-indigo-900/30 dark:selection:text-indigo-200">
+  <body class="text-slate-900 dark:text-slate-200 antialiased selection:bg-indigo-100 selection:text-indigo-900 dark:selection:bg-indigo-900/30 dark:selection:text-indigo-200 font-normal">
     <div id="root"></div>
     <div id="fb-root"></div>
   </body>
